--- a/frontend_App/templates/root.html
+++ b/frontend_App/templates/root.html
@@ -13,6 +13,7 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    {% csrf_token %}
     <div id="root"></div>
 </body>
 
