--- a/frontend_App/templates/root.html
+++ b/frontend_App/templates/root.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Django React Demo</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script defer="defer" src="{% static 'js/main.js' %}"></script>
 </head>
