--- a/frontend_App/frontend/src/pages/ProductView/ProductView.module.css
+++ b/frontend_App/frontend/src/pages/ProductView/ProductView.module.css
@@ -1,7 +1,7 @@
 .reset_style {
     display: inline-block;
-    width: 30rem;
-    height: 25rem;
+    max-width: 30rem;
+    /* height: 25rem; */
 }
 
 .reset_style>div {
